--- a/assets/locale/en/messages.pot
+++ b/assets/locale/en/messages.pot
@@ -549,59 +549,59 @@ msgid "js.WorkflowEditor.Tabs.create.defaultPrefix"
 msgstr ""
 
 #. default-message: Learn how to replace this step
-#: assets/js/WorkflowEditor/wfmodule/DeprecationNotice.js:12
-msgid "js.WorkflowEditor.wfmodule.DeprecationNotice.learnHowToReplace"
+#: assets/js/WorkflowEditor/step/DeprecationNotice.js:12
+msgid "js.WorkflowEditor.step.DeprecationNotice.learnHowToReplace"
 msgstr ""
 
 #. default-message: Type a note...
-#: assets/js/WorkflowEditor/wfmodule/Step.js:355
-msgid "js.WorkflowEditor.wfmodule.EditableNotes.placeholder"
+#: assets/js/WorkflowEditor/step/Step.js:355
+msgid "js.WorkflowEditor.step.EditableNotes.placeholder"
 msgstr ""
 
 #. When clicked, this opens a menu with more actions.
 #. default-message: more
-#: assets/js/WorkflowEditor/wfmodule/StepContextMenu.js:17
-msgid "js.WorkflowEditor.wfmodule.StepContextMenu.more.hoverText"
+#: assets/js/WorkflowEditor/step/StepContextMenu.js:17
+msgid "js.WorkflowEditor.step.StepContextMenu.more.hoverText"
 msgstr ""
 
 #. default-message: enter Zen mode
-#: assets/js/WorkflowEditor/wfmodule/Step.js:240
-msgid "js.WorkflowEditor.wfmodule.ZenMode.enter"
+#: assets/js/WorkflowEditor/step/Step.js:240
+msgid "js.WorkflowEditor.step.ZenMode.enter"
 msgstr ""
 
 #. default-message: exit Zen mode
-#: assets/js/WorkflowEditor/wfmodule/Step.js:240
-msgid "js.WorkflowEditor.wfmodule.ZenMode.exit"
+#: assets/js/WorkflowEditor/step/Step.js:240
+msgid "js.WorkflowEditor.step.ZenMode.exit"
 msgstr ""
 
 #. default-message: Email alerts disabled
-#: assets/js/WorkflowEditor/wfmodule/Step.js:372
-msgid "js.WorkflowEditor.wfmodule.alert.disabled"
+#: assets/js/WorkflowEditor/step/Step.js:372
+msgid "js.WorkflowEditor.step.alert.disabled"
 msgstr ""
 
 #. default-message: Email alerts enabled
-#: assets/js/WorkflowEditor/wfmodule/Step.js:372
-msgid "js.WorkflowEditor.wfmodule.alert.enabled"
+#: assets/js/WorkflowEditor/step/Step.js:372
+msgid "js.WorkflowEditor.step.alert.enabled"
 msgstr ""
 
 #. default-message: Help for this module
-#: assets/js/WorkflowEditor/wfmodule/Step.js:384
-msgid "js.WorkflowEditor.wfmodule.help.hoverText"
+#: assets/js/WorkflowEditor/step/Step.js:384
+msgid "js.WorkflowEditor.step.help.hoverText"
 msgstr ""
 
 #. default-message: Edit Note
-#: assets/js/WorkflowEditor/wfmodule/Step.js:394
-msgid "js.WorkflowEditor.wfmodule.notes.edit.hoverText"
+#: assets/js/WorkflowEditor/step/Step.js:394
+msgid "js.WorkflowEditor.step.notes.edit.hoverText"
 msgstr ""
 
 #. default-message: Delete
-#: assets/js/WorkflowEditor/wfmodule/StepContextMenu.js:22
-msgid "js.WorkflowEditor.wfmodule.stepContextMenu.delete"
+#: assets/js/WorkflowEditor/step/StepContextMenu.js:22
+msgid "js.WorkflowEditor.step.stepContextMenu.delete"
 msgstr ""
 
 #. default-message: Export data
-#: assets/js/WorkflowEditor/wfmodule/StepContextMenu.js:21
-msgid "js.WorkflowEditor.wfmodule.stepContextMenu.exportData"
+#: assets/js/WorkflowEditor/step/StepContextMenu.js:21
+msgid "js.WorkflowEditor.step.stepContextMenu.exportData"
 msgstr ""
 
 #. default-message: Training
